--- a/styles.css
+++ b/styles.css
@@ -42,8 +42,7 @@ main {
 
 .hero {
     display: flex;
-    /* flex: 1; */
-    justify-content: space-between;
+    justify-content: center;
     padding: 5% 10%;
     height: 30vh;
     gap: 2%;
@@ -90,11 +89,144 @@ main {
     margin: 0px;
 }
 
+.advantages {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    padding: 1% 10%;
+}
 
+.advantages header {
+    display: flex;
+    justify-content: center;
 
+}
 
-footer {
+.advantages-img {
+    display: flex;
+    justify-content: center;
+
+}
+
+figure.advantages-fig {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 200px;
+    height: 250px;
+}
+
+figure.advantages-fig img {
+    display: flex;
+    justify-content: center;
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 1rem;
+
+}
+
+figure.advantages-fig figcaption {
+    padding-top: 0.7rem;
+    display: flex;
+    text-align: center;
+    margin: 0;
+}
+
+section.quote {
+    display: flex;
+    background-color: #e5e7eb;
+}
+
+blockquote {
+    display: flex;
+    flex-direction: column;
+    padding: 1% 10%;
+    margin: 5% 15%;
+    font-size: 36px;
+    font-weight: 100;
+    text-align: left;
+    line-height: 1.3;
+}
+
+blockquote footer {
+    display: flex;
+    flex-direction: column;
+    width: 200px;
+    height: 100px;
+    align-self: flex-end;
+    text-align: end;
+    font-weight: 900;
+    font-size: 18px;
+}
+
+cite {
+    font-style: normal;
+}
+
+.cta-signup-form {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+.signup-form {
+    display: flex;
+    background-color: #3882f6;
+    margin: 10% 14%;
+    border-radius: 0.8rem;
+    color: white;
+    gap: 1%;
+    justify-content: center;
+    padding: 2% 10%
+}
+
+.form-left {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: flex-start;
+}
+
+.form-left h2 {
+    margin: 0;
+}
+
+.form-left p {
+    margin: 0;
+}
+
+.form-right {
+    display: flex;
+    flex: 1;
+    width: 200px;
+    justify-content: center;
+    align-content: center;
+}
+
+.form-right button {
+    padding: 0.01em 1.3em;
+    background-color: #3882f6;
+    border: 2px solid #f9faf8;
+    border-radius: 0.4em;
+    font-weight: 900;
+    color: #f9faf8;
+    font-size: 18px;
+}
+
+footer.copyrights {
     display: flex;
     flex: 1;
     flex-direction: column;
+    align-items: center;
+    background-color: #1F2937;
+    color: #f9faf8;
+}
+
+.copy-rights {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 2%;
 }
